[metadata]
name = networking-lenovo
version = 2016.3.0
summary = Networking Lenovo contains the Lenovo vendor code for Openstack Neutron
description-file =
    README.rst
author = Lenovo Networking
author-email = openstack-dev-networking@lenovo.com
home-page = http://github.com/openstack/networking-lenovo
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_lenovo

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    lenovo = networking_lenovo.ml2.mech_lenovo_nos:LenovoNOSMechanismDriver
neutron.db.alembic_migrations =
    networking-lenovo = networking_lenovo.db.migration:alembic_migrations

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_lenovo/locale/networking-lenovo.pot

[compile_catalog]
directory = networking_lenovo/locale
domain = networking-lenovo

[update_catalog]
domain = networking-lenovo
output_dir = networking_lenovo/locale
input_file = networking_lenovo/locale/networking-lenovo.pot

[wheel]
universal = 1
